embeded Youtube successfully, and made an effort on UI

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <!--<script src="js/ng-cordova.min.js"></script>-->
+    <script src="js/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -29,7 +29,7 @@
 
   <body ng-app="M.O.B" >
         <ion-nav-view>
-             <ion-tabs class="tabs-icon-top  tabs-color-positive">
+             <ion-tabs class="tabs-icon-top  tabs-color-positive tabs-background-stable">
 
           <!-- Dashboard Tab -->
           <ion-tab title="M.O.B" icon-off="ion-home" icon-on="ion-home" href="#/app/home">
